[gd_scene load_steps=51 format=3 uid="uid://dcnmekjes8q0c"]

[ext_resource type="Texture2D" uid="uid://xyxdf7x1ji1v" path="res://entities/enemies/teachers_assistant/TA.png" id="1_gfhhi"]
[ext_resource type="Script" path="res://entities/enemies/teachers_assistant/Teachers_Assistant.gd" id="1_vmoe8"]
[ext_resource type="AudioStream" uid="uid://ch325iypvwdbi" path="res://sounds/Attack/TeachersAssistant/EnterDialogue.wav" id="3_ysq3g"]
[ext_resource type="AudioStream" uid="uid://dcmxjgu0oa4kt" path="res://sounds/Attack/TeachersAssistant/Attack1.wav" id="4_aesf0"]
[ext_resource type="AudioStream" uid="uid://c5ig8cppn3k0a" path="res://sounds/Attack/TeachersAssistant/Attack2.wav" id="5_p5v3h"]
[ext_resource type="AudioStream" uid="uid://bim22ja8kj0ek" path="res://sounds/Attack/TeachersAssistant/Attack3.wav" id="6_uxv3k"]
[ext_resource type="AudioStream" uid="uid://bsqx8jiuukh1p" path="res://sounds/Attack/TeachersAssistant/Idle1.wav" id="7_87in3"]
[ext_resource type="AudioStream" uid="uid://b8fjhtlonmjsd" path="res://sounds/Attack/TeachersAssistant/Idle2.wav" id="8_ipf8i"]
[ext_resource type="AudioStream" uid="uid://bldi5qcqojndw" path="res://sounds/Attack/TeachersAssistant/Idle3.wav" id="9_ub4ea"]
[ext_resource type="AudioStream" uid="uid://itmjj68gap8y" path="res://sounds/Attack/TeachersAssistant/Idle4.wav" id="10_1g8d6"]
[ext_resource type="AudioStream" uid="uid://cgcj28k6wggjd" path="res://sounds/Attack/TeachersAssistant/Stunned1.wav" id="11_41ld4"]
[ext_resource type="AudioStream" uid="uid://bilcihpf72n4k" path="res://sounds/Attack/TeachersAssistant/Stunned2.wav" id="12_vusax"]
[ext_resource type="AudioStream" uid="uid://ml1io50yoc5m" path="res://sounds/Attack/TeachersAssistant/Death.wav" id="13_ahlo3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5dhcu"]
atlas = ExtResource("1_gfhhi")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfhfb"]
atlas = ExtResource("1_gfhhi")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_354qe"]
atlas = ExtResource("1_gfhhi")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fdvk"]
atlas = ExtResource("1_gfhhi")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4pvi"]
atlas = ExtResource("1_gfhhi")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aneck"]
atlas = ExtResource("1_gfhhi")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xunh"]
atlas = ExtResource("1_gfhhi")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oy2ng"]
atlas = ExtResource("1_gfhhi")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_21f4s"]
atlas = ExtResource("1_gfhhi")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_23ef7"]
atlas = ExtResource("1_gfhhi")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yy161"]
atlas = ExtResource("1_gfhhi")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3oo2"]
atlas = ExtResource("1_gfhhi")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ru14"]
atlas = ExtResource("1_gfhhi")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dxp6"]
atlas = ExtResource("1_gfhhi")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnymg"]
atlas = ExtResource("1_gfhhi")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvgri"]
atlas = ExtResource("1_gfhhi")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bms8u"]
atlas = ExtResource("1_gfhhi")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_17bji"]
atlas = ExtResource("1_gfhhi")
region = Rect2(512, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmfn7"]
atlas = ExtResource("1_gfhhi")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wayb0"]
atlas = ExtResource("1_gfhhi")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwfi3"]
atlas = ExtResource("1_gfhhi")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_esr3i"]
atlas = ExtResource("1_gfhhi")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_looeo"]
atlas = ExtResource("1_gfhhi")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f53d5"]
atlas = ExtResource("1_gfhhi")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mko2"]
atlas = ExtResource("1_gfhhi")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfxuq"]
atlas = ExtResource("1_gfhhi")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fub3c"]
atlas = ExtResource("1_gfhhi")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rp1w6"]
atlas = ExtResource("1_gfhhi")
region = Rect2(448, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_lqkjk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dhcu")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfhfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_354qe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fdvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4pvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aneck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xunh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy2ng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21f4s")
}],
"loop": true,
"name": &"move_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_23ef7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yy161")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3oo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ru14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dxp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnymg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvgri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bms8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17bji")
}],
"loop": true,
"name": &"move_left_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmfn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wayb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwfi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_esr3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_looeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f53d5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mko2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfxuq")
}],
"loop": true,
"name": &"move_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fub3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp1w6")
}],
"loop": true,
"name": &"stunned",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_p02x3"]
resource_name = "on_hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3wx2r"]
_data = {
"on_hit": SubResource("Animation_p02x3")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xb2v1"]
radius = 12.3077
height = 36.9231

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2sgmo"]
size = Vector2(24.6154, 14.6154)

[sub_resource type="CircleShape2D" id="CircleShape2D_fbl60"]
radius = 278.304

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_lamij"]
streams_count = 3
stream_0/stream = ExtResource("4_aesf0")
stream_0/weight = 1.0
stream_1/stream = ExtResource("5_p5v3h")
stream_1/weight = 1.0
stream_2/stream = ExtResource("6_uxv3k")
stream_2/weight = 0.75

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_tvvcp"]
streams_count = 4
stream_0/stream = ExtResource("7_87in3")
stream_0/weight = 1.0
stream_1/stream = ExtResource("8_ipf8i")
stream_1/weight = 1.0
stream_2/stream = ExtResource("9_ub4ea")
stream_2/weight = 0.05
stream_3/stream = ExtResource("10_1g8d6")
stream_3/weight = 0.75

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_grtdo"]
playback_mode = 1
streams_count = 2
stream_0/stream = ExtResource("11_41ld4")
stream_0/weight = 1.0
stream_1/stream = ExtResource("12_vusax")
stream_1/weight = 0.75

[node name="TeachersAssistant" type="CharacterBody2D" groups=["Enemy"]]
z_index = 2
scale = Vector2(0.65, 0.65)
collision_layer = 4
collision_mask = 33
script = ExtResource("1_vmoe8")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lqkjk")
animation = &"stunned"
frame_progress = 0.260136

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
libraries = {
"": SubResource("AnimationLibrary_3wx2r")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9.23077)
shape = SubResource("CapsuleShape2D_xb2v1")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(9.16995e-08, 24.2308)
shape = SubResource("RectangleShape2D_2sgmo")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_path_custom_point_size = 2.0

[node name="Sight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 35

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource("CircleShape2D_fbl60")

[node name="PathFindingTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="ChargeCooldown" type="Timer" parent="."]
wait_time = 7.5
one_shot = true

[node name="StunnedTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="EnterDialogue" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ysq3g")
volume_db = 5.0

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_lamij")
volume_db = -10.0

[node name="IdleSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_tvvcp")

[node name="StunnedSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_grtdo")
volume_db = -10.0

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_ahlo3")

[connection signal="body_entered" from="Hurtbox" to="." method="hit_player"]
[connection signal="body_entered" from="Sight" to="." method="set_player_in_range"]
[connection signal="body_exited" from="Sight" to="." method="set_player_out_of_range"]
[connection signal="timeout" from="PathFindingTimer" to="." method="idle_movement"]
[connection signal="timeout" from="ChargeCooldown" to="." method="end_cooldown"]
[connection signal="timeout" from="StunnedTimer" to="." method="stun_over"]
